WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235715
AXLogger::add should not cause tree updates via children()
https://bugs.webkit.org/show_bug.cgi?id=235715
Summary
AXLogger::add should not cause tree updates via children()
Tyler Wilcock
Reported
2022-01-27 07:54:43 PST
AXLogger::add(TextStream&, const RefPtr<AXCoreObject>&, bool) currently calls the update version of children, causing behavior to potentially be different between builds with logging enabled and logging disabled. void AXLogger::add(TextStream& stream, const RefPtr<AXCoreObject>& object, bool recursive) { ...truncated... if (recursive) { for (auto& child : object->children()) add(stream, child, true); } ...truncated } The logger should only read the current state of the object / tree, never modify it.
Attachments
Patch
(1.63 KB, patch)
2022-01-27 07:58 PST
,
Tyler Wilcock
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-27 07:55:13 PST
<
rdar://problem/88132984
>
Tyler Wilcock
Comment 2
2022-01-27 07:58:34 PST
Created
attachment 450137
[details]
Patch
EWS
Comment 3
2022-01-27 10:00:04 PST
Committed
r288676
(
246482@main
): <
https://commits.webkit.org/246482@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450137
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug