AXLogger::add should not cause tree updates via children() https://bugs.webkit.org/show_bug.cgi?id=235715

Reviewed by Chris Fleizach.

AXLogger::add(TextStream&, const RefPtr<AXCoreObject>&, bool) currently
calls the update version of AXCoreObject::children(bool), causing behavior
to potentially be different between builds with logging enabled and logging
disabled.

The logger should only read the current state of the object / tree, never modify it.

* accessibility/AXLogger.cpp:
(WebCore::AXLogger::add):



Canonical link: https://commits.webkit.org/246482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288676 268f45cc-cd09-0410-ab3c-d52691b4dbfc